feat:added image qr post request for url method
